--- a/HTML,CSS,JS/4_homepage.html
+++ b/HTML,CSS,JS/4_homepage.html
@@ -211,32 +211,34 @@
 <!-------------------------------------------------------------------Sidebar end ----------------------------------------------------------------------------------------------->
 
 
-<!--Homepage Content-->
-<div class="position-relative" id="homepage-content">
-    <!--heading-->
-    <div id="home-content-heading" class="position-absolute " style="width: max-content; height: max-content; left: 0; right: 0; margin: auto; top: 200px;">
-        <h1 class="text-center fw-bolder" style="font-size: 60px;">Welcome <span><label class="heading-label" id="username-label">Kalana</label></span></h1>
-        <h1 class="text-center fw-bolder" style="font-size: 60px;">to the POS System</h1>
+<div class="homepagecommon">
+    <!--Homepage Content-->
+    <div class="position-relative" id="homepage-content">
+        <!--heading-->
+        <div id="home-content-heading" class="position-absolute " style="width: max-content; height: max-content; left: 0; right: 0; margin: auto; top: 200px;">
+            <h1 class="text-center fw-bolder" style="font-size: 60px;">Welcome <span><label class="heading-label" id="username-label">Kalana</label></span></h1>
+            <h1 class="text-center fw-bolder" style="font-size: 60px;">to the POS System</h1>
+        </div>
+
+        <!--nav and counts-->
+        <div class="position-absolute" id="customernav" style="width: max-content; height: max-content; left: 400px; top: 430px;">
+            <a href="5_customer_manage_page.html" style="text-decoration: none; color: inherit;">
+                <img src="../assets/images/icons/homepage-sidebar-icons/icons8-customer-100.png" alt="customer-icon">
+            </a>
+            <h1 class=" text-center fw-semibold" style="font-size: 16px; width: max-content; height: max-content; margin-left: -10px;">Customer Count:</h1>
+            <label class="count-label position-absolute" id="customercount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
+        </div>
+
+        <div class="position-absolute" id="itemnav" style="width: max-content; height: max-content; left: 1000px; top: 430px;">
+            <a href="6_item_manage_page.html" style="text-decoration: none; color: inherit;">
+                <img src="../assets/images/icons/homepage-sidebar-icons/icons8-box-100.png" alt="customer-icon">
+            </a>
+            <h1 class=" text-center fw-semibold" style="font-size: 16px;">Item Count:</h1>
+            <label class="count-label position-absolute" id="itemcount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
+        </div>
+
+
     </div>
-
-    <!--nav and counts-->
-    <div class="position-absolute" id="customernav" style="width: max-content; height: max-content; left: 800px; top: 430px;">
-        <a href="5_customer_manage_page.html" style="text-decoration: none; color: inherit;">
-            <img src="../assets/images/icons/homepage-sidebar-icons/icons8-customer-100.png" alt="customer-icon">
-        </a>
-        <h1 class=" text-center fw-semibold" style="font-size: 16px; width: max-content; height: max-content; margin-left: -10px;">Customer Count:</h1>
-        <label class="count-label position-absolute" id="customercount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
-    </div>
-
-    <div class="position-absolute" id="itemnav" style="width: max-content; height: max-content; left: 1000px; top: 430px;">
-        <a href="6_item_manage_page.html" style="text-decoration: none; color: inherit;">
-            <img src="../assets/images/icons/homepage-sidebar-icons/icons8-box-100.png" alt="customer-icon">
-        </a>
-        <h1 class=" text-center fw-semibold" style="font-size: 16px;">Item Count:</h1>
-        <label class="count-label position-absolute" id="itemcount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
-    </div>
-
-
 </div>
 
 
