--- a/HTML,CSS,JS/6_item_manage_page.html
+++ b/HTML,CSS,JS/6_item_manage_page.html
@@ -197,116 +197,118 @@
 
 <!-------------------------------------------------------------------Sidebar end ----------------------------------------------------------------------------------------------->
 
-<!-- Item Page Content -->
-<div class="content position-relative p-4">
-    <!-- Header -->
-    <h1 class="text-center fw-bolder" style="font-size: 50px; margin-top: 20px;">Item Manage</h1>
+<div class="itemcommon">
+    <!-- Item Page Content -->
+    <div class="content position-relative p-4">
+        <!-- Header -->
+        <h1 class="text-center fw-bolder" style="font-size: 50px; margin-top: 20px;">Item Manage</h1>
 
-    <!-- Item Form -->
-    <form class="mt-5 ">
-        <div class="row g-3 mb-4 " style="width: 80rem; left: 0; right: 0; margin: auto">
-            <!-- Item ID -->
-            <div class="col-md-3">
-                <label for="itemId" class="form-label fw-medium" style="font-size: 18px;">Item ID</label>
-                <input type="text" class="form-control" id="itemId" placeholder="Item ID">
+        <!-- Item Form -->
+        <form class="mt-5 ">
+            <div class="row g-3 mb-4 " style="width: 80rem; left: 0; right: 0; margin: auto">
+                <!-- Item ID -->
+                <div class="col-md-3">
+                    <label for="itemId" class="form-label fw-medium" style="font-size: 18px;">Item ID</label>
+                    <input type="text" class="form-control" id="itemId" placeholder="Item ID">
+                </div>
+                <!-- Item Name -->
+                <div class="col-md-3">
+                    <label for="itemName" class="form-label fw-medium" style="font-size: 18px;">Item Name</label>
+                    <input type="text" class="form-control" id="itemName" placeholder="Item Name">
+                </div>
+                <!-- Item Type -->
+                <div class="col-md-3">
+                    <label for="itemType" class="form-label fw-medium" style="font-size: 18px;">Item Type</label>
+                    <input type="text" class="form-control" id="itemType" placeholder="Item Type">
+                </div>
+                <!-- Item Price -->
+                <div class="col-md-3">
+                    <label for="itemPrice" class="form-label fw-medium" style="font-size: 18px;">Item Price</label>
+                    <input type="text" class="form-control" id="itemPrice" placeholder="Item Price">
+                </div>
+                <!-- Item Description -->
+                <div class="col-md-3">
+                    <label for="itemDescription" class="form-label fw-medium" style="font-size: 18px;">Item Description</label>
+                    <input type="text" class="form-control" id="itemDescription" placeholder="Item Description">
+                </div>
+                <!-- Item QTY -->
+                <div class="col-md-3">
+                    <label for="itemQty" class="form-label fw-medium" style="font-size: 18px;">Item QTY</label>
+                    <input type="text" class="form-control" id="itemQty" placeholder="Item QTY">
+                </div>
             </div>
-            <!-- Item Name -->
-            <div class="col-md-3">
-                <label for="itemName" class="form-label fw-medium" style="font-size: 18px;">Item Name</label>
-                <input type="text" class="form-control" id="itemName" placeholder="Item Name">
+
+            <!-- CRUD Buttons -->
+            <div class="d-flex justify-content-center mt-4 position-absolute" style=" width:max-content; height:max-content; top: 260px; left: 1080px;">
+                <button type="button" class="btn btn-success mx-2" style="font-size: 20px; width: 130px;">Add</button>
+                <button type="button" class="btn btn-warning mx-2" style="font-size: 20px; width: 130px; /*color: white*/">Update</button>
+                <button type="button" class="btn btn-danger mx-2" style="font-size: 20px; width: 130px;">Delete</button>
+                <button type="button" class="btn btn-primary mx-2" style="font-size: 20px; width: 130px;">Clear</button>
             </div>
-            <!-- Item Type -->
-            <div class="col-md-3">
-                <label for="itemType" class="form-label fw-medium" style="font-size: 18px;">Item Type</label>
-                <input type="text" class="form-control" id="itemType" placeholder="Item Type">
-            </div>
-            <!-- Item Price -->
-            <div class="col-md-3">
-                <label for="itemPrice" class="form-label fw-medium" style="font-size: 18px;">Item Price</label>
-                <input type="text" class="form-control" id="itemPrice" placeholder="Item Price">
-            </div>
-            <!-- Item Description -->
-            <div class="col-md-3">
-                <label for="itemDescription" class="form-label fw-medium" style="font-size: 18px;">Item Description</label>
-                <input type="text" class="form-control" id="itemDescription" placeholder="Item Description">
-            </div>
-            <!-- Item QTY -->
-            <div class="col-md-3">
-                <label for="itemQty" class="form-label fw-medium" style="font-size: 18px;">Item QTY</label>
-                <input type="text" class="form-control" id="itemQty" placeholder="Item QTY">
-            </div>
-        </div>
+        </form>
+    </div>
 
-        <!-- CRUD Buttons -->
-        <div class="d-flex justify-content-center mt-4 position-absolute" style=" width:max-content; height:max-content; top: 260px; left: 980px;">
-            <button type="button" class="btn btn-success mx-2" style="font-size: 20px; width: 130px;">Add</button>
-            <button type="button" class="btn btn-warning mx-2" style="font-size: 20px; width: 130px; /*color: white*/">Update</button>
-            <button type="button" class="btn btn-danger mx-2" style="font-size: 20px; width: 130px;">Delete</button>
-            <button type="button" class="btn btn-primary mx-2" style="font-size: 20px; width: 130px;">Clear</button>
-        </div>
-    </form>
-</div>
+    <!--table-->
+    <div class="table position-relative">
+        <table class="table table-bordered border-primary position-absolute " style="font-size: 18px; width: 1100px; height: 300px; left: 0; right: 0; margin: auto; top: 60px;">
+            <thead>
+            <tr>
+                <th>Item ID</th>
+                <th>Item Name</th>
+                <th>Item Type</th>
+                <th>Item Price</th>
+                <th>Item Description</th>
+                <th>Item QTY</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
-<!--table-->
-<div class="table position-relative">
-    <table class="table table-bordered border-primary position-absolute " style="font-size: 18px; width: 1100px; height: 300px; left: 0; right: 0; margin: auto; top: 60px;">
-        <thead>
-        <tr>
-            <th>Item ID</th>
-            <th>Item Name</th>
-            <th>Item Type</th>
-            <th>Item Price</th>
-            <th>Item Description</th>
-            <th>Item QTY</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-
-        </tr>
-        </tbody>
-    </table>
+            </tr>
+            </tbody>
+        </table>
 
 
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
